--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -163,6 +163,7 @@ p {
 .wrapper {
   max-width: 1100px;
   margin: 0 auto;
+  padding: 0 30px;
 }
 
 // Navbar styling
@@ -228,6 +229,7 @@ nav {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-gap: 30px;
+  //   padding: 30px;
 }
 
 .producContainer {
