--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,22 +13,29 @@
   </head>
 
   <body>
-    <nav>
-      <ul>
-        <li id="to-left">
-          <p><a href="/"> Users - demo </a></p>
-        </li>
-        <li id="to-right">
-          <a href="/signup">Signup</a>
-          <span> | </span>
-          <a href="/login">Login</a>
-          <span> | </span>
-          <form id="logout-form" action="/logout" method="POST">
-            <button>Logout</button>
-          </form>
-          <a href="/userProfile">Profile</a>
-        </li>
-      </ul>
+    <nav class="">
+      <div class="wrapper navContent">
+        <div class="logo">
+          <img src="/images/bonsai-logo-black.png" alt="" />
+          <span>BonsaiBranch</span>
+        </div>
+        <ul class="navLinks">
+          <li><a href="/">Home</a></li>
+          <li><a href="/shop">Shop</a></li>
+          <li><a href="#">FAQ</a></li>
+          <li class="loginIcon"><a href="/signup">Sign up</a></li>
+          <li class="loginIcon"><a href="/login">Login</a></li>
+        </ul>
+        <ul class="navIcons">
+
+          <li>
+            <a href="#"><img src="/images/cart.svg" alt="cart" /></a>
+          </li>
+          <li>
+            <a href="/userProfile"><img src="/images/user.svg" alt="cart" /></a>
+          </li>
+        </ul>
+      </div>
     </nav>
     {{{body}}}
 
