--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,21 +1,23 @@
-<div id="form">
-  <h2>Login</h2>
+<div class="wrapper">
 
-  <form action="/login" method="POST">
+  <div id="form">
 
-    <label>
-      Email
-      <input type="email" name="email" placeholder="rockstar@ironhack.com" />
-    </label>
+    <form action="/login" method="POST" class="form">
+      <h1>Login</h1>
+      <label>
+        Email
+        <input type="email" name="email" placeholder="rockstar@ironhack.com" />
+      </label>
 
-    <label>Password
-      <input type="password" name="password" placeholder="********" />
-    </label>
+      <label>Password
+        <input type="password" name="password" placeholder="********" />
+      </label>
 
-    <button type="submit">Login</button>
+      <button class="button" type="submit">Login</button>
 
-    {{#if errorMessage}}
-      <p class="error">{{errorMessage}}</p>
-    {{/if}}
-  </form>
+      {{#if errorMessage}}
+        <p class="error">{{errorMessage}}</p>
+      {{/if}}
+    </form>
+  </div>
 </div>
