--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,4 +1,4 @@
-<div id="form">
+{{!-- <div id="form">
   <h2>Signup</h2>
   <form action="/signup" method="POST">
 
@@ -23,5 +23,30 @@
     {{#if errorMessage}}
       <p class="error">{{errorMessage}}</p>
     {{/if}}
+  </form>
+</div> --}}
+
+<div class="wrapper">
+  <form action="/signup" method="POST" class="form">
+    <h1>Signup</h1>
+    <div class="inputContainer">
+      <label> Username </label>
+      <br />
+      <input type="text" name="username" placeholder="Username" />
+    </div>
+    <div class="inputContainer">
+      <label> Email </label>
+      <br />
+      <input type="email" name="email" placeholder="rockstar@ironhack.com" />
+    </div>
+    <div class="inputContainer">
+      <label> Password </label>
+      <br />
+      <input type="password" name="password" placeholder="********" />
+    </div>
+
+    <button class="button" type="submit">Create account</button>
+
+    <p class="error">{{errorMessage}}</p>
   </form>
 </div>
