--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -29,7 +29,10 @@
         <ul class="navIcons">
 
           <li>
-            <a href="#"><img src="/images/cart.svg" alt="cart" /></a>
+            <a href="/shoppingcart"><img
+                src="/images/cart.svg"
+                alt="cart"
+              /></a>
           </li>
           <li>
             <a href="/userProfile"><img src="/images/user.svg" alt="cart" /></a>
