--- a/views/shop/shop-productpage.hbs
+++ b/views/shop/shop-productpage.hbs
@@ -15,7 +15,7 @@
       <div class="bottomSection">
         <div class="priceAndButtonContainer">
           <span class="priceValue">{{this.price}}$</span>
-          <form method="POST" action="/submit">
+          <form method="POST" action="/shop/{{this._id}}/submit">
             <button class="button" type="submit">Add to cart</button>
           </form>
         </div>
