--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -65,10 +65,19 @@ label {
   background-color: var(--green);
   border: none;
   border-radius: var(--sm-border-radius);
-  padding: 10px;
+  padding: 20px 40px;
   font-family: "Kumbh Sans", sans-serif;
   font-weight: bold;
   text-transform: uppercase;
+
+  img {
+    margin-right: 10px;
+    width: 15px !important;
+  }
+}
+
+.button:hover {
+  cursor: pointer;
 }
 
 .wrapper {
@@ -196,12 +205,16 @@ nav {
     .priceAndButtonContainer {
       display: flex;
       gap: 30px;
+      justify-content: space-between;
+      align-items: center;
       .button {
         width: 100%;
       }
     }
   }
 }
+
+// Shopping Cart styling
 
 .shoppingcart {
   max-width: 600px;
@@ -223,7 +236,6 @@ nav {
   li {
     list-style: none;
     margin: 0 auto;
-    // width: 600px;
     width: 100%;
   }
 
@@ -285,7 +297,7 @@ nav {
   }
 }
 
-// From Styling
+// Form Styling
 .form {
   display: flex;
   flex-direction: column;
@@ -320,5 +332,41 @@ nav {
 
   button {
     width: 100%;
+  }
+}
+
+// Userpage Styling
+.userPage {
+  h1 {
+    margin: 75px 0 50px 0;
+    text-align: center;
+  }
+  .userAccount {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: space-evenly;
+    gap: 20px;
+    width: 400px;
+    margin: 0 auto;
+
+    button {
+      img {
+        width: 15px;
+        margin-right: 5px;
+        fill: white;
+      }
+    }
+
+    a {
+      text-decoration: none;
+      color: white;
+    }
+    .logoutButton {
+      background-color: var(--red);
+    }
+  }
+  p {
+    text-align: center;
   }
 }
