--- a/views/shop/shop-productpage.hbs
+++ b/views/shop/shop-productpage.hbs
@@ -16,7 +16,8 @@
         <div class="priceAndButtonContainer">
           <span class="priceValue">{{this.price}}$</span>
           <form method="POST" action="/shop/{{this._id}}/submit">
-            <button class="button" type="submit">Add to cart</button>
+            <button class="button" type="submit">
+              <img src="/images/cart-white.svg" alt="" />Add to cart</button>
           </form>
         </div>
       </div>
