modify username and email working

--- a/views/users/user-profile.hbs
+++ b/views/users/user-profile.hbs
@@ -10,7 +10,7 @@
       <button class="button logoutButton">
         <a href="/userProfile">Log out</a>
       </button>
-      <a class="changeBtn" href="#">Change Settings</a>
+      <a class="changeBtn" href="/editUser">Change Settings</a>
     </div>
   </div>
 {{else}}
