--- a/views/shop/shopping-cart.hbs
+++ b/views/shop/shopping-cart.hbs
@@ -25,8 +25,8 @@
             </div>
           </div>
           <form method="POST" action="/shop/{{this._id}}/remove">
-            <button class="button closeulb" type="delete">
-              x</button>
+            <button class="closeulb" type="delete">
+              ×</button>
           </form>
         </div>
       </li>
