--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,18 @@
-<h1>{{appTitle}} 🚀</h1>
-<p>Welcome Ironhacker!</p>
+<div class="wrapper homePage">
+  <h1>BonsaiBranch 盆栽支店</h1>
+  <div class="heroSectionTextContainer">
+    <p>
+      <b> Welcome to our Bonsai Online Shop</b>, where the ancient art of bonsai
+      cultivation meets modern convenience. Step into a world where nature's
+      elegance is meticulously crafted and nurtured, bringing you miniature
+      masterpieces that embody tranquility and harmony. At our online shop, we
+      offer a diverse collection of bonsai trees, carefully curated to cater to
+      beginners and seasoned enthusiasts alike.
+    </p>
+    <a class="button" href="/shop">Shop trees →</a>
+  </div>
+  <div class="heroImageContainer">
+    <img src="/images/bonsai/home1.png" alt="" />
+    <span class="treeDes">Juniper Bonsai ‒ ジュニパー</span>
+  </div>
+</div>
