--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -45,7 +45,7 @@ h2 {
 p {
   font-size: 16px;
   color: var(--medium-grey);
-  line-height: 150%;
+  line-height: 160%;
 }
 
 label {
@@ -117,6 +117,44 @@ nav .navContent a img {
 }
 nav .navContent a:hover {
   color: #6cad3f;
+}
+
+.homePage {
+  position: relative;
+  margin-top: 75px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  gap: 100px;
+}
+.homePage h1 {
+  position: absolute;
+  font-size: 85px;
+  padding-left: 20px;
+}
+.homePage .heroSectionTextContainer {
+  margin-top: 150px;
+}
+.homePage .heroSectionTextContainer p {
+  margin-bottom: 50px;
+}
+.homePage .heroSectionTextContainer .button {
+  background-color: var(--black);
+  text-decoration: none;
+  text-transform: capitalize;
+}
+.homePage .heroImageContaier {
+  position: relative;
+}
+.homePage img {
+  width: 100%;
+  border-radius: var(--std-border-radius);
+}
+.homePage .treeDes {
+  position: absolute;
+  right: -100px;
+  bottom: 100px;
+  transform: rotate(90deg);
+  color: var(--medium-grey);
 }
 
 .shop h1 {
@@ -230,6 +268,9 @@ nav .navContent a:hover {
   font-size: 60px;
   position: relative;
   bottom: 10px;
+  border: none;
+  background: none;
+  color: var(--medium-grey);
 }
 .shoppingcart .shoppingCartProduct .closeulb:hover {
   cursor: pointer;
