--- a/views/shop/shopping-cart.hbs
+++ b/views/shop/shopping-cart.hbs
@@ -1,20 +1,7 @@
 <div class="wrapper shoppingcart">
   <h1>Your cart {{this.username}}</h1>
   <ul>
-    <li>
-      <div class="shoppingCartProduct">
-        <div class="leftElements">
-          <img src="/images/bonsai/chinese-elm-1.png" alt="" />
-          <div class="shoppingCartProductTextContainer">
-            <h2>Chinese Elm</h2>
-            <span>2000$</span>
-          </div>
-        </div>
-        <span class="closeulb">×</span>
-      </div>
-    </li>
     {{#each this.shoppingCart}}
-
       <li>
         <div class="shoppingCartProduct">
           <div class="leftElements">
@@ -25,8 +12,8 @@
             </div>
           </div>
           <form method="POST" action="/shop/{{this._id}}/remove">
-            <button class="button closeulb" type="delete">
-              x</button>
+            <button class="closeulb" type="delete">
+              ×</button>
           </form>
         </div>
       </li>
