add maps on about page

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -22,7 +22,7 @@
         <ul class="navLinks">
           <li><a href="/">Home</a></li>
           <li><a href="/shop">Shop</a></li>
-          <li><a href="#">FAQ</a></li>
+          <li><a href="about">About</a></li>
           <li class="loginIcon"><a href="/signup">Sign up</a></li>
           <li class="loginIcon"><a href="/login">Login</a></li>
         </ul>
