delete user complete

--- a/views/users/edit-user.hbs
+++ b/views/users/edit-user.hbs
@@ -13,5 +13,8 @@
   </label>
 </div>
   <button class="button">Save Changes</button>
+  </form>
+  <form method="POST" action="/deleteUser">
+  <button class="button">Delete User</button>
+  </form>
 </div>
-</form>
