back button works

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -180,15 +180,27 @@ nav .navContent a:hover {
   border-radius: 10px;
 }
 
+.producPageContentWrapper {
+  margin-top: 75px;
+}
+
+.backButton {
+  color: var(--medium-grey);
+  text-decoration: none;
+  padding-left: 40px;
+  margin-bottom: 20px;
+}
+
 .singleProducContainer {
   display: flex;
   gap: 100px;
   max-width: 1000px;
   margin: 0 auto;
-  margin-top: 100px;
+  margin-top: 20px;
 }
 .singleProducContainer img {
   width: 40%;
+  align-self: center;
   border-radius: var(--std-border-radius);
 }
 .singleProducContainer .singleProductTextContainer {
