--- a/views/shop/shop-overview.hbs
+++ b/views/shop/shop-overview.hbs
@@ -6,7 +6,7 @@
         <a href="/shop/{{this._id}}"><img src={{this.imgUrl}} alt="" /></a>
         <div class="productTextContainer">
           <h2>{{this.name}}</h2>
-          <span>{{this.price}}€</span></div>
+          <span>{{this.price}}$</span></div>
       </div>
     {{/each}}
   </div>
