redirection of profile to cart works

--- a/views/users/user-profile.hbs
+++ b/views/users/user-profile.hbs
@@ -5,7 +5,7 @@
       <p>This is your profile page my friend!</p>
       <button class="button">
         <img src="/images/cart-white.svg" alt="" />
-        <a href="/userProfile">View cart</a>
+        <a href="/shoppingcart">View cart</a>
       </button>
       <button class="button logoutButton">
         <a href="/userProfile">Log out</a>
