--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,20 +1,15 @@
 <div class="wrapper">
-
-  <div id="form">
-
+  <div class="inputContainer">
     <form action="/login" method="POST" class="form">
       <h1>Login</h1>
       <label>
         Email
         <input type="email" name="email" placeholder="rockstar@ironhack.com" />
       </label>
-
       <label>Password
         <input type="password" name="password" placeholder="********" />
       </label>
-
       <button class="button" type="submit">Login</button>
-
       {{#if errorMessage}}
         <p class="error">{{errorMessage}}</p>
       {{/if}}
