--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -46,6 +46,10 @@ h1 {
   font-size: 44px;
 }
 
+.centerHeading {
+  text-align: center;
+}
+
 h2 {
   font-size: 24px;
 }
@@ -88,6 +92,7 @@ label {
   max-width: 1100px;
   margin: 0 auto;
   padding: 0 30px;
+  margin-bottom: 50px;
 }
 
 // Navbar styling
@@ -144,7 +149,7 @@ nav {
 // Home page styling
 .homePage {
   position: relative;
-  margin-top: 75px;
+  margin-top: 120px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
   gap: 100px;
@@ -454,6 +459,13 @@ nav {
   p {
     text-align: center;
   }
+}
+
+.teamSection {
+  display: flex;
+  flex-direction: column;
+  gap: 75px;
+  padding: 75px 0;
 }
 
 //  Styling ABOUT page - map
