--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,27 +1,98 @@
-<h3>Meet the Team</h3>
-<div class="Team-Container">
-  <div class="Team-Member">
-    <h3>Alex</h3>
-
+<div class="wrapper">
+  <div class="teamSection">
+    <h1 class="centerHeading">Meet the Gardeners</h1>
+    <div class="producPageContentWrapper">
+      <div class="singleProducContainer">
+        <img src="/images/bonsai/chinese-elm-1.png" alt="" />
+        <div class="singleProductTextContainer">
+          <div class="topSection">
+            <div class="singleProductHeaderContainer">
+              <h1>Felix</h1>
+            </div>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae
+              tenetur expedita, fugiat vero porro beatae, a voluptatibus
+              consequatur sequi nisi dolorem repellendus ipsa dolorum
+              laudantium, totam nihil. Atque corporis aspernatur nesciunt nemo
+              esse illo dolorem quas fuga officiis animi, error cupiditate sequi
+              totam beatae tenetur. Nesciunt quasi reiciendis blanditiis
+              similique!
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="producPageContentWrapper">
+      <div class="singleProducContainer">
+        <div class="singleProductTextContainer">
+          <div class="topSection">
+            <div class="singleProductHeaderContainer">
+              <h1>Andy</h1>
+            </div>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae
+              tenetur expedita, fugiat vero porro beatae, a voluptatibus
+              consequatur sequi nisi dolorem repellendus ipsa dolorum
+              laudantium, totam nihil. Atque corporis aspernatur nesciunt nemo
+              esse illo dolorem quas fuga officiis animi, error cupiditate sequi
+              totam beatae tenetur. Nesciunt quasi reiciendis blanditiis
+              similique!
+            </p>
+          </div>
+        </div>
+        <img src="/images/bonsai/chinese-elm-1.png" alt="" />
+      </div>
+    </div>
+    <div class="producPageContentWrapper">
+      <div class="singleProducContainer">
+        <img src="/images/bonsai/chinese-elm-1.png" alt="" />
+        <div class="singleProductTextContainer">
+          <div class="topSection">
+            <div class="singleProductHeaderContainer">
+              <h1>Alex</h1>
+            </div>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae
+              tenetur expedita, fugiat vero porro beatae, a voluptatibus
+              consequatur sequi nisi dolorem repellendus ipsa dolorum
+              laudantium, totam nihil. Atque corporis aspernatur nesciunt nemo
+              esse illo dolorem quas fuga officiis animi, error cupiditate sequi
+              totam beatae tenetur. Nesciunt quasi reiciendis blanditiis
+              similique!
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="Team-Member">
-    <h3>Andi</h3>
+  <h1 class="centerHeading">Come find us</h1>
 
-  </div>
-  <div class="Team-Member">
-    <h3>Felix</h3>
-
+  <div class="producPageContentWrapper">
+    <div class="singleProducContainer">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d606.7578203771791!2d13.45297402822122!3d52.5328682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a84e76c7a190bf%3A0xf0f8fb2feac6bed4!2sStorkower%20Str.%20138%2C%2010407%20Berlin!5e0!3m2!1sde!2sde!4v1688558013950!5m2!1sde!2sde"
+        width="600"
+        height="450"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
+      <div class="singleProductTextContainer">
+        <div class="topSection">
+          <div class="singleProductHeaderContainer">
+            <h2>Visit our amazing garden!</h2>
+          </div>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae
+            tenetur expedita, fugiat vero porro beatae, a voluptatibus
+            consequatur sequi nisi dolorem repellendus ipsa dolorum laudantium,
+            totam nihil. Atque corporis aspernatur nesciunt nemo esse illo
+            dolorem quas fuga officiis animi, error cupiditate sequi totam
+            beatae tenetur. Nesciunt quasi reiciendis blanditiis similique!
+          </p>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
-
-<h3>Come visit us</h3>
-<div id="map"></div>
-<iframe
-  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d606.7578203771791!2d13.45297402822122!3d52.5328682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a84e76c7a190bf%3A0xf0f8fb2feac6bed4!2sStorkower%20Str.%20138%2C%2010407%20Berlin!5e0!3m2!1sde!2sde!4v1688558013950!5m2!1sde!2sde"
-  width="600"
-  height="450"
-  style="border:0;"
-  allowfullscreen=""
-  loading="lazy"
-  referrerpolicy="no-referrer-when-downgrade"
-></iframe>
