--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,10 +15,12 @@
   <body>
     <nav class="">
       <div class="wrapper navContent">
-        <div class="logo">
-          <img src="/images/bonsai-logo-black.png" alt="" />
-          <span>BonsaiBranch</span>
-        </div>
+        <a href="/">
+          <div class="logo">
+            <img src="/images/bonsai-logo-black.png" alt="" />
+            <span>BonsaiBranch</span>
+          </div>
+        </a>
         <ul class="navLinks">
           <li><a href="/">Home</a></li>
           <li><a href="/shop">Shop</a></li>
