--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -117,9 +117,9 @@ nav {
       bottom: 5px;
       position: relative;
 
-      img {
+      /*  img {
         height: 35px;
-      }
+      } */
     }
 
     ul {
@@ -136,7 +136,7 @@ nav {
       color: var(--medium-grey);
 
       img {
-        width: 18px;
+        width: 25px;
       }
     }
 
