fixed bugs and andded content to the about section

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -3,7 +3,7 @@
     <h1 class="centerHeading">Meet the Gardeners</h1>
     <div class="producPageContentWrapper">
       <div class="singleProducContainer">
-        <img src="/images/bonsai/chinese-elm-1.png" alt="" />
+        <img src="/images/team/felix.png" alt="" />
         <div class="singleProductTextContainer">
           <div class="topSection">
             <div class="singleProductHeaderContainer">
@@ -40,12 +40,12 @@
             </p>
           </div>
         </div>
-        <img src="/images/bonsai/chinese-elm-1.png" alt="" />
+        <img src="/images/team/andy.png" alt="" />
       </div>
     </div>
     <div class="producPageContentWrapper">
       <div class="singleProducContainer">
-        <img src="/images/bonsai/chinese-elm-1.png" alt="" />
+        <img src="/images/team/alex.png" alt="" />
         <div class="singleProductTextContainer">
           <div class="topSection">
             <div class="singleProductHeaderContainer">
